--- a/index.html
+++ b/index.html
@@ -1,11 +1,295 @@
+// ...existing code...
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title></title>
+  <title>死の手帳</title>
+  <style>
+    :root{
+      --card:#fbf6e6;
+      --ink:#111;
+      --accent:#0b0b0d;
+      --muted:#666;
+      --border:rgba(0,0,0,0.08);
+    }
+    html,body{height:100%;margin:0;font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
+    body{
+      background:linear-gradient(180deg,#070708 0%, #141416 100%);
+      display:flex;align-items:center;justify-content:center;padding:1.25rem;
+      color:var(--ink);
+    }
+
+    .sheet{
+      width:880px; max-width:100%;
+      background:var(--card);
+      border-radius:10px;
+      box-shadow:0 20px 50px rgba(0,0,0,0.6);
+      overflow:visible;
+      border:1px solid rgba(0,0,0,0.12);
+    }
+
+    header{
+      background:var(--accent);
+      color:#fff;
+      padding:1.1rem 1.25rem;
+      text-align:center;
+      font-family:"Times New Roman", Georgia, serif;
+    }
+    header h1{margin:0;font-size:1.6rem;letter-spacing:0.18em;text-transform:uppercase;}
+    header p{margin:0.25rem 0 0;font-size:0.85rem;opacity:0.9;}
+
+    main{padding:1rem 1.25rem 1.5rem;}
+
+    /* remove scroll/drag: don't force horizontal overflow */
+    .table-wrap{overflow:visible;}
+    table{
+      width:100%; border-collapse:collapse; min-width:0;
+      background:transparent;
+    }
+    caption{caption-side:top;text-align:left;padding:0.4rem 0;font-weight:700;color:var(--accent);font-family:Georgia,serif;}
+    thead th{
+      text-align:left;padding:0.6rem 0.8rem;background:transparent;color:var(--accent);
+      border-bottom:2px solid var(--border);font-weight:700;font-family:Georgia,serif;
+    }
+    tbody td{
+      padding:0.6rem 0.8rem;border-bottom:1px dashed var(--border);
+      vertical-align:top;font-size:0.97rem;
+      color:var(--ink);
+      font-family: "Lucida Handwriting", "Segoe Script", cursive;
+      background:transparent;
+    }
+    tbody tr:hover td{background:rgba(0,0,0,0.02);}
+
+    .muted{color:var(--muted);font-size:0.92rem;}
+
+    /* Responsive: convert table to stacked cards on small screens (no horizontal scroll) */
+    @media (max-width:720px){
+      .sheet{width:100%;border-radius:8px;}
+      main{padding:0.75rem;}
+
+      /* turn table into block layout */
+      table, thead, tbody, th, td, tr { display:block; }
+      thead { display:none; }
+
+      tbody tr {
+        margin:0 0 0.9rem;
+        padding:0.6rem;
+        background: rgba(0,0,0,0.02);
+        border-radius:8px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.04) inset;
+      }
+
+      tbody td {
+        display:flex;
+        justify-content:space-between;
+        align-items:flex-start;
+        padding:0.35rem 0;
+        border-bottom:none;
+        font-size:0.95rem;
+        line-height:1.25;
+      }
+
+      /* label from data-label attribute */
+      tbody td::before{
+        content: attr(data-label);
+        font-weight:700;
+        color:var(--accent);
+        margin-right:0.6rem;
+        white-space:nowrap;
+        flex:0 0 auto;
+      }
+
+      /* ensure notes wrap and take remaining space */
+      tbody td:last-child{ width:55%; text-align:right; }
+      tbody td:nth-last-child(2){ width:35%; text-align:right; }
+
+      /* prevent any horizontal overflow */
+      body, .sheet, main, .table-wrap, table, tbody tr { overflow-x:visible; width:100%; box-sizing:border-box; }
+    }
+  </style>
 </head>
 <body>
-  <h1>test</h1>
+  <div class="sheet" role="region" aria-label="Death Note notebook">
+    <header>
+      <h1>DEATH NOTE</h1>
+      <p>死の手帳 — Notebook entry</p>
+    </header>
+
+    <main>
+      <div class="table-wrap" role="table" aria-label="Entries">
+        <table>
+          <caption>Notebook Entries</caption>
+          <thead>
+            <tr>
+              <th style="width:48px">#</th>
+              <th style="width:200px">Name</th>
+              <th style="width:140px">Date</th>
+              <th style="width:160px">Role</th>
+              <th>Notes</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td data-label="#">1</td>
+              <td data-label="Name">Light Yagami</td>
+              <td data-label="Date" class="muted">200X-XX-XX</td>
+              <td data-label="Role" class="muted">Student</td>
+              <td data-label="Notes">Initial entry. Replace with your own fictional notes.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
+  </div>
 </body>
 </html>
+// ...existing code...
+```// filepath: /workspaces/dnote/index.html
+// ...existing code...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>死の手帳</title>
+  <style>
+    :root{
+      --card:#fbf6e6;
+      --ink:#111;
+      --accent:#0b0b0d;
+      --muted:#666;
+      --border:rgba(0,0,0,0.08);
+    }
+    html,body{height:100%;margin:0;font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
+    body{
+      background:linear-gradient(180deg,#070708 0%, #141416 100%);
+      display:flex;align-items:center;justify-content:center;padding:1.25rem;
+      color:var(--ink);
+    }
+
+    .sheet{
+      width:880px; max-width:100%;
+      background:var(--card);
+      border-radius:10px;
+      box-shadow:0 20px 50px rgba(0,0,0,0.6);
+      overflow:visible;
+      border:1px solid rgba(0,0,0,0.12);
+    }
+
+    header{
+      background:var(--accent);
+      color:#fff;
+      padding:1.1rem 1.25rem;
+      text-align:center;
+      font-family:"Times New Roman", Georgia, serif;
+    }
+    header h1{margin:0;font-size:1.6rem;letter-spacing:0.18em;text-transform:uppercase;}
+    header p{margin:0.25rem 0 0;font-size:0.85rem;opacity:0.9;}
+
+    main{padding:1rem 1.25rem 1.5rem;}
+
+    /* remove scroll/drag: don't force horizontal overflow */
+    .table-wrap{overflow:visible;}
+    table{
+      width:100%; border-collapse:collapse; min-width:0;
+      background:transparent;
+    }
+    caption{caption-side:top;text-align:left;padding:0.4rem 0;font-weight:700;color:var(--accent);font-family:Georgia,serif;}
+    thead th{
+      text-align:left;padding:0.6rem 0.8rem;background:transparent;color:var(--accent);
+      border-bottom:2px solid var(--border);font-weight:700;font-family:Georgia,serif;
+    }
+    tbody td{
+      padding:0.6rem 0.8rem;border-bottom:1px dashed var(--border);
+      vertical-align:top;font-size:0.97rem;
+      color:var(--ink);
+      font-family: "Lucida Handwriting", "Segoe Script", cursive;
+      background:transparent;
+    }
+    tbody tr:hover td{background:rgba(0,0,0,0.02);}
+
+    .muted{color:var(--muted);font-size:0.92rem;}
+
+    /* Responsive: convert table to stacked cards on small screens (no horizontal scroll) */
+    @media (max-width:720px){
+      .sheet{width:100%;border-radius:8px;}
+      main{padding:0.75rem;}
+
+      /* turn table into block layout */
+      table, thead, tbody, th, td, tr { display:block; }
+      thead { display:none; }
+
+      tbody tr {
+        margin:0 0 0.9rem;
+        padding:0.6rem;
+        background: rgba(0,0,0,0.02);
+        border-radius:8px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.04) inset;
+      }
+
+      tbody td {
+        display:flex;
+        justify-content:space-between;
+        align-items:flex-start;
+        padding:0.35rem 0;
+        border-bottom:none;
+        font-size:0.95rem;
+        line-height:1.25;
+      }
+
+      /* label from data-label attribute */
+      tbody td::before{
+        content: attr(data-label);
+        font-weight:700;
+        color:var(--accent);
+        margin-right:0.6rem;
+        white-space:nowrap;
+        flex:0 0 auto;
+      }
+
+      /* ensure notes wrap and take remaining space */
+      tbody td:last-child{ width:55%; text-align:right; }
+      tbody td:nth-last-child(2){ width:35%; text-align:right; }
+
+      /* prevent any horizontal overflow */
+      body, .sheet, main, .table-wrap, table, tbody tr { overflow-x:visible; width:100%; box-sizing:border-box; }
+    }
+  </style>
+</head>
+<body>
+  <div class="sheet" role="region" aria-label="Death Note notebook">
+    <header>
+      <h1>DEATH NOTE</h1>
+      <p>死の手帳 — Notebook entry</p>
+    </header>
+
+    <main>
+      <div class="table-wrap" role="table" aria-label="Entries">
+        <table>
+          <caption>Notebook Entries</caption>
+          <thead>
+            <tr>
+              <th style="width:48px">#</th>
+              <th style="width:200px">Name</th>
+              <th style="width:140px">Date</th>
+              <th style="width:160px">Role</th>
+              <th>Notes</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td data-label="#">1</td>
+              <td data-label="Name">Light Yagami</td>
+              <td data-label="Date" class="muted">200X-XX-XX</td>
+              <td data-label="Role" class="muted">Student</td>
+              <td data-label="Notes">Initial entry. Replace with your own fictional notes.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
+  </div>
+</body>
+</html>
+// ...existing code...
