--- a/index.html
+++ b/index.html
@@ -1,295 +1,209 @@
 // ...existing code...
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>死の手帳</title>
   <style>
     :root{
-      --card:#fbf6e6;
-      --ink:#111;
-      --accent:#0b0b0d;
-      --muted:#666;
-      --border:rgba(0,0,0,0.08);
+      --card:#ffffff;
+      --bg:#000000;
+      --ink:#000000;
+      --accent:#000000;
+      --border:rgba(0,0,0,0.12);
     }
-    html,body{height:100%;margin:0;font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
-    body{
-      background:linear-gradient(180deg,#070708 0%, #141416 100%);
-      display:flex;align-items:center;justify-content:center;padding:1.25rem;
-      color:var(--ink);
-    }
-
-    .sheet{
-      width:880px; max-width:100%;
-      background:var(--card);
-      border-radius:10px;
-      box-shadow:0 20px 50px rgba(0,0,0,0.6);
-      overflow:visible;
-      border:1px solid rgba(0,0,0,0.12);
-    }
-
-    header{
-      background:var(--accent);
-      color:#fff;
-      padding:1.1rem 1.25rem;
-      text-align:center;
-      font-family:"Times New Roman", Georgia, serif;
-    }
-    header h1{margin:0;font-size:1.6rem;letter-spacing:0.18em;text-transform:uppercase;}
-    header p{margin:0.25rem 0 0;font-size:0.85rem;opacity:0.9;}
-
-    main{padding:1rem 1.25rem 1.5rem;}
-
-    /* remove scroll/drag: don't force horizontal overflow */
-    .table-wrap{overflow:visible;}
-    table{
-      width:100%; border-collapse:collapse; min-width:0;
-      background:transparent;
-    }
+    html,body{height:100%;margin:0;font-family:system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;}
+    body{background:var(--bg);color:var(--ink);display:flex;align-items:center;justify-content:center;padding:1.25rem;}
+    main{width:880px;max-width:100%;padding:1rem;background:var(--card);border-radius:8px;border:1px solid var(--border);box-shadow:none;}
+    table{width:100%;border-collapse:collapse;min-width:0;background:transparent;}
     caption{caption-side:top;text-align:left;padding:0.4rem 0;font-weight:700;color:var(--accent);font-family:Georgia,serif;}
-    thead th{
-      text-align:left;padding:0.6rem 0.8rem;background:transparent;color:var(--accent);
-      border-bottom:2px solid var(--border);font-weight:700;font-family:Georgia,serif;
-    }
-    tbody td{
-      padding:0.6rem 0.8rem;border-bottom:1px dashed var(--border);
-      vertical-align:top;font-size:0.97rem;
-      color:var(--ink);
-      font-family: "Lucida Handwriting", "Segoe Script", cursive;
-      background:transparent;
-    }
-    tbody tr:hover td{background:rgba(0,0,0,0.02);}
-
-    .muted{color:var(--muted);font-size:0.92rem;}
-
-    /* Responsive: convert table to stacked cards on small screens (no horizontal scroll) */
+    thead th{text-align:left;padding:0.6rem 0.8rem;color:var(--accent);border-bottom:2px solid var(--border);font-weight:700;font-family:Georgia,serif;}
+    tbody td{padding:0.6rem 0.8rem;border-bottom:1px dashed var(--border);vertical-align:top;font-size:0.97rem;color:var(--ink);}
+    tbody tr:hover td{background:rgba(0,0,0,0.04);}
+    .muted{color:rgba(0,0,0,0.6);font-size:0.92rem;}
     @media (max-width:720px){
-      .sheet{width:100%;border-radius:8px;}
       main{padding:0.75rem;}
-
-      /* turn table into block layout */
-      table, thead, tbody, th, td, tr { display:block; }
-      thead { display:none; }
-
-      tbody tr {
-        margin:0 0 0.9rem;
-        padding:0.6rem;
-        background: rgba(0,0,0,0.02);
-        border-radius:8px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.04) inset;
-      }
-
-      tbody td {
-        display:flex;
-        justify-content:space-between;
-        align-items:flex-start;
-        padding:0.35rem 0;
-        border-bottom:none;
-        font-size:0.95rem;
-        line-height:1.25;
-      }
-
-      /* label from data-label attribute */
-      tbody td::before{
-        content: attr(data-label);
-        font-weight:700;
-        color:var(--accent);
-        margin-right:0.6rem;
-        white-space:nowrap;
-        flex:0 0 auto;
-      }
-
-      /* ensure notes wrap and take remaining space */
-      tbody td:last-child{ width:55%; text-align:right; }
-      tbody td:nth-last-child(2){ width:35%; text-align:right; }
-
-      /* prevent any horizontal overflow */
-      body, .sheet, main, .table-wrap, table, tbody tr { overflow-x:visible; width:100%; box-sizing:border-box; }
+      table, thead, tbody, th, td, tr{display:block;}
+      thead{display:none;}
+      tbody tr{margin:0 0 0.9rem;padding:0.6rem;background:var(--card);border-radius:8px;}
+      tbody td{display:flex;justify-content:space-between;align-items:flex-start;padding:0.35rem 0;border-bottom:none;font-size:0.95rem;line-height:1.25;}
+      tbody td::before{content:attr(data-label);font-weight:700;color:var(--accent);margin-right:0.6rem;white-space:nowrap;flex:0 0 auto;}
+      body,main,table,tbody tr{width:100%;box-sizing:border-box;overflow-x:visible;}
     }
   </style>
 </head>
 <body>
-  <div class="sheet" role="region" aria-label="Death Note notebook">
-    <header>
-      <h1>DEATH NOTE</h1>
-      <p>死の手帳 — Notebook entry</p>
-    </header>
-
-    <main>
-      <div class="table-wrap" role="table" aria-label="Entries">
-        <table>
-          <caption>Notebook Entries</caption>
-          <thead>
-            <tr>
-              <th style="width:48px">#</th>
-              <th style="width:200px">Name</th>
-              <th style="width:140px">Date</th>
-              <th style="width:160px">Role</th>
-              <th>Notes</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td data-label="#">1</td>
-              <td data-label="Name">Light Yagami</td>
-              <td data-label="Date" class="muted">200X-XX-XX</td>
-              <td data-label="Role" class="muted">Student</td>
-              <td data-label="Notes">Initial entry. Replace with your own fictional notes.</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </main>
-  </div>
+  <main>
+    <table>
+      <caption>記録一覧</caption>
+      <thead>
+        <tr>
+          <th style="width:48px">番号</th>
+          <th style="width:200px">名前</th>
+          <th style="width:140px">日付</th>
+          <th style="width:160px">役割</th>
+          <th>メモ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-label="番号">1</td>
+          <td data-label="名前">ラケシュ</td>
+          <td data-label="日付" class="muted">2025年10月11日</td>
+          <td data-label="役割" class="muted">先輩</td>
+          <td data-label="メモ">口笛</td>
+        </tr>
+        <tr>
+          <td data-label="番号">2</td>
+          <td data-label="名前">佐藤健</td>
+          <td data-label="日付" class="muted">2024年07月03日</td>
+          <td data-label="役割" class="muted">同僚</td>
+          <td data-label="メモ">コーヒー好き</td>
+        </tr>
+        <tr>
+          <td data-label="番号">3</td>
+          <td data-label="名前">高橋美咲</td>
+          <td data-label="日付" class="muted">2025年01月18日</td>
+          <td data-label="役割" class="muted">アルバイト</td>
+          <td data-label="メモ">猫アレルギー</td>
+        </tr>
+        <tr>
+          <td data-label="番号">4</td>
+          <td data-label="名前">中村翔</td>
+          <td data-label="日付" class="muted">2023年12月05日</td>
+          <td data-label="役割" class="muted">友人</td>
+          <td data-label="メモ">地下鉄マニア</td>
+        </tr>
+        <tr>
+          <td data-label="番号">5</td>
+          <td data-label="名前">山田花子</td>
+          <td data-label="日付" class="muted">2025年05月22日</td>
+          <td data-label="役割" class="muted">先輩</td>
+          <td data-label="メモ">読書家</td>
+        </tr>
+        <tr>
+          <td data-label="番号">6</td>
+          <td data-label="名前">伊藤誠</td>
+          <td data-label="日付" class="muted">2024年11月09日</td>
+          <td data-label="役割" class="muted">顧客</td>
+          <td data-label="メモ">折りたたみ傘常備</td>
+        </tr>
+        <tr>
+          <td data-label="番号">7</td>
+          <td data-label="名前">渡辺翔太</td>
+          <td data-label="日付" class="muted">2025年08月30日</td>
+          <td data-label="役割" class="muted">後輩</td>
+          <td data-label="メモ">ギター練習中</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
 </body>
 </html>
 // ...existing code...
 ```// filepath: /workspaces/dnote/index.html
 // ...existing code...
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>死の手帳</title>
   <style>
     :root{
-      --card:#fbf6e6;
-      --ink:#111;
-      --accent:#0b0b0d;
-      --muted:#666;
-      --border:rgba(0,0,0,0.08);
+      --card:#ffffff;
+      --bg:#000000;
+      --ink:#000000;
+      --accent:#000000;
+      --border:rgba(0,0,0,0.12);
     }
-    html,body{height:100%;margin:0;font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
-    body{
-      background:linear-gradient(180deg,#070708 0%, #141416 100%);
-      display:flex;align-items:center;justify-content:center;padding:1.25rem;
-      color:var(--ink);
-    }
-
-    .sheet{
-      width:880px; max-width:100%;
-      background:var(--card);
-      border-radius:10px;
-      box-shadow:0 20px 50px rgba(0,0,0,0.6);
-      overflow:visible;
-      border:1px solid rgba(0,0,0,0.12);
-    }
-
-    header{
-      background:var(--accent);
-      color:#fff;
-      padding:1.1rem 1.25rem;
-      text-align:center;
-      font-family:"Times New Roman", Georgia, serif;
-    }
-    header h1{margin:0;font-size:1.6rem;letter-spacing:0.18em;text-transform:uppercase;}
-    header p{margin:0.25rem 0 0;font-size:0.85rem;opacity:0.9;}
-
-    main{padding:1rem 1.25rem 1.5rem;}
-
-    /* remove scroll/drag: don't force horizontal overflow */
-    .table-wrap{overflow:visible;}
-    table{
-      width:100%; border-collapse:collapse; min-width:0;
-      background:transparent;
-    }
+    html,body{height:100%;margin:0;font-family:system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;}
+    body{background:var(--bg);color:var(--ink);display:flex;align-items:center;justify-content:center;padding:1.25rem;}
+    main{width:880px;max-width:100%;padding:1rem;background:var(--card);border-radius:8px;border:1px solid var(--border);box-shadow:none;}
+    table{width:100%;border-collapse:collapse;min-width:0;background:transparent;}
     caption{caption-side:top;text-align:left;padding:0.4rem 0;font-weight:700;color:var(--accent);font-family:Georgia,serif;}
-    thead th{
-      text-align:left;padding:0.6rem 0.8rem;background:transparent;color:var(--accent);
-      border-bottom:2px solid var(--border);font-weight:700;font-family:Georgia,serif;
-    }
-    tbody td{
-      padding:0.6rem 0.8rem;border-bottom:1px dashed var(--border);
-      vertical-align:top;font-size:0.97rem;
-      color:var(--ink);
-      font-family: "Lucida Handwriting", "Segoe Script", cursive;
-      background:transparent;
-    }
-    tbody tr:hover td{background:rgba(0,0,0,0.02);}
-
-    .muted{color:var(--muted);font-size:0.92rem;}
-
-    /* Responsive: convert table to stacked cards on small screens (no horizontal scroll) */
+    thead th{text-align:left;padding:0.6rem 0.8rem;color:var(--accent);border-bottom:2px solid var(--border);font-weight:700;font-family:Georgia,serif;}
+    tbody td{padding:0.6rem 0.8rem;border-bottom:1px dashed var(--border);vertical-align:top;font-size:0.97rem;color:var(--ink);}
+    tbody tr:hover td{background:rgba(0,0,0,0.04);}
+    .muted{color:rgba(0,0,0,0.6);font-size:0.92rem;}
     @media (max-width:720px){
-      .sheet{width:100%;border-radius:8px;}
       main{padding:0.75rem;}
-
-      /* turn table into block layout */
-      table, thead, tbody, th, td, tr { display:block; }
-      thead { display:none; }
-
-      tbody tr {
-        margin:0 0 0.9rem;
-        padding:0.6rem;
-        background: rgba(0,0,0,0.02);
-        border-radius:8px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.04) inset;
-      }
-
-      tbody td {
-        display:flex;
-        justify-content:space-between;
-        align-items:flex-start;
-        padding:0.35rem 0;
-        border-bottom:none;
-        font-size:0.95rem;
-        line-height:1.25;
-      }
-
-      /* label from data-label attribute */
-      tbody td::before{
-        content: attr(data-label);
-        font-weight:700;
-        color:var(--accent);
-        margin-right:0.6rem;
-        white-space:nowrap;
-        flex:0 0 auto;
-      }
-
-      /* ensure notes wrap and take remaining space */
-      tbody td:last-child{ width:55%; text-align:right; }
-      tbody td:nth-last-child(2){ width:35%; text-align:right; }
-
-      /* prevent any horizontal overflow */
-      body, .sheet, main, .table-wrap, table, tbody tr { overflow-x:visible; width:100%; box-sizing:border-box; }
+      table, thead, tbody, th, td, tr{display:block;}
+      thead{display:none;}
+      tbody tr{margin:0 0 0.9rem;padding:0.6rem;background:var(--card);border-radius:8px;}
+      tbody td{display:flex;justify-content:space-between;align-items:flex-start;padding:0.35rem 0;border-bottom:none;font-size:0.95rem;line-height:1.25;}
+      tbody td::before{content:attr(data-label);font-weight:700;color:var(--accent);margin-right:0.6rem;white-space:nowrap;flex:0 0 auto;}
+      body,main,table,tbody tr{width:100%;box-sizing:border-box;overflow-x:visible;}
     }
   </style>
 </head>
 <body>
-  <div class="sheet" role="region" aria-label="Death Note notebook">
-    <header>
-      <h1>DEATH NOTE</h1>
-      <p>死の手帳 — Notebook entry</p>
-    </header>
-
-    <main>
-      <div class="table-wrap" role="table" aria-label="Entries">
-        <table>
-          <caption>Notebook Entries</caption>
-          <thead>
-            <tr>
-              <th style="width:48px">#</th>
-              <th style="width:200px">Name</th>
-              <th style="width:140px">Date</th>
-              <th style="width:160px">Role</th>
-              <th>Notes</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td data-label="#">1</td>
-              <td data-label="Name">Light Yagami</td>
-              <td data-label="Date" class="muted">200X-XX-XX</td>
-              <td data-label="Role" class="muted">Student</td>
-              <td data-label="Notes">Initial entry. Replace with your own fictional notes.</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </main>
-  </div>
+  <main>
+    <table>
+      <caption>記録一覧</caption>
+      <thead>
+        <tr>
+          <th style="width:48px">番号</th>
+          <th style="width:200px">名前</th>
+          <th style="width:140px">日付</th>
+          <th style="width:160px">役割</th>
+          <th>メモ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-label="番号">1</td>
+          <td data-label="名前">ラケシュ</td>
+          <td data-label="日付" class="muted">2025年10月11日</td>
+          <td data-label="役割" class="muted">先輩</td>
+          <td data-label="メモ">口笛</td>
+        </tr>
+        <tr>
+          <td data-label="番号">2</td>
+          <td data-label="名前">佐藤健</td>
+          <td data-label="日付" class="muted">2024年07月03日</td>
+          <td data-label="役割" class="muted">同僚</td>
+          <td data-label="メモ">コーヒー好き</td>
+        </tr>
+        <tr>
+          <td data-label="番号">3</td>
+          <td data-label="名前">高橋美咲</td>
+          <td data-label="日付" class="muted">2025年01月18日</td>
+          <td data-label="役割" class="muted">アルバイト</td>
+          <td data-label="メモ">猫アレルギー</td>
+        </tr>
+        <tr>
+          <td data-label="番号">4</td>
+          <td data-label="名前">中村翔</td>
+          <td data-label="日付" class="muted">2023年12月05日</td>
+          <td data-label="役割" class="muted">友人</td>
+          <td data-label="メモ">地下鉄マニア</td>
+        </tr>
+        <tr>
+          <td data-label="番号">5</td>
+          <td data-label="名前">山田花子</td>
+          <td data-label="日付" class="muted">2025年05月22日</td>
+          <td data-label="役割" class="muted">先輩</td>
+          <td data-label="メモ">読書家</td>
+        </tr>
+        <tr>
+          <td data-label="番号">6</td>
+          <td data-label="名前">伊藤誠</td>
+          <td data-label="日付" class="muted">2024年11月09日</td>
+          <td data-label="役割" class="muted">顧客</td>
+          <td data-label="メモ">折りたたみ傘常備</td>
+        </tr>
+        <tr>
+          <td data-label="番号">7</td>
+          <td data-label="名前">渡辺翔太</td>
+          <td data-label="日付" class="muted">2025年08月30日</td>
+          <td data-label="役割" class="muted">後輩</td>
+          <td data-label="メモ">ギター練習中</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
 </body>
 </html>
 // ...existing code...
